--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
-                        <h1 class="brand-heading">grayscale</h1>
+                        <h1 class="brand-heading">Angel</h1>
                         <p class="intro-text">A free, responsive, one page Bootstrap theme.<br>Created with love.</p><a class="btn btn-link btn-circle" role="button" href="#about"><i class="fa fa-angle-double-down animated"></i></a>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
     <div class="map-clean"><iframe allowfullscreen="" frameborder="0" src="https://cdn.bootstrapstudio.io/placeholders/map.html" width="100%" height="450"></iframe></div>
     <footer>
         <div class="container text-center">
-            <p>Copyright ©&nbsp;Brand 2022</p>
+            <p>Sngel R ©&nbsp;Brand 2022</p>
         </div>
     </footer>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
