--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     </nav>
     <header class="masthead" style="background-image: url('assets/img/intro-bg.jpg');transform: perspective(0px);">
         <div class="align-items-xxl-start intro-body">
-            <div class="container d-flex d-xxl-flex justify-content-center justify-content-xxl-center" style="max-width: 800px;margin-top: 10%;">
+            <div class="container d-flex d-xxl-flex justify-content-center justify-content-xxl-center" style="max-width: 800px;margin-top: 10%;padding-bottom: 32px;">
                 <div class="row" style="width: 100%;">
                     <div class="col-lg-8 text-nowrap text-center mx-auto" style="width: 100%;">
                         <h1 class="d-xxl-flex justify-content-xxl-center brand-heading">I'm Angel</h1>
                         <p class="intro-text">What's up?</p>
                     </div>
                 </div>
-            </div><img src="assets/img/me2.jpeg" style="width: 40%;min-width: 200px;">
+            </div><img src="assets/img/me2.jpeg" style="width: 40%;min-width: 200px;max-width: 550px;">
         </div>
     </header>
     <section class="text-center content-section" id="about">
