--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                     <h2>Contact me</h2>
                     <p></p>
                     <ul class="list-inline banner-social-buttons">
-                        <li class="list-inline-item">&nbsp;<a class="btn btn-primary btn-lg btn-default" role="button" href="mailto:aangelr@icloud.com" style="width: 157px;"><i class="fa fa-envelope"></i><span class="network-name">&nbsp;Email</span></a></li>
-                        <li class="list-inline-item">&nbsp;<a class="btn btn-primary btn-lg btn-default" role="button" href="https://www.linkedin.com/in/angel-rodriguez-551a3b212/" style="width: 157px;"><i class="fa fa-linkedin-square"></i><span class="network-name">&nbsp;Linkedin</span></a></li>
-                        <li class="list-inline-item" style="margin-right: 8px;">&nbsp;<a class="btn btn-primary btn-lg btn-default" role="button" href="https://github.com/aangelr" style="width: 157px;"><i class="fa fa-github fa-fw"></i><span class="network-name">&nbsp;github</span></a></li>
+                        <li class="list-inline-item" style="margin-left: 8px;">&nbsp;<a class="btn btn-primary btn-lg btn-default" role="button" href="mailto:aangelr@icloud.com" style="width: 157px;"><i class="fa fa-envelope"></i><span class="network-name">&nbsp;Email</span></a></li>
+                        <li class="list-inline-item" style="margin-left: 8px;">&nbsp;<a class="btn btn-primary btn-lg btn-default" role="button" href="https://www.linkedin.com/in/angel-rodriguez-551a3b212/" style="width: 157px;"><i class="fa fa-linkedin-square"></i><span class="network-name">&nbsp;Linkedin</span></a></li>
+                        <li class="list-inline-item" style="margin-right: 8px;margin-left: 8px;">&nbsp;<a class="btn btn-primary btn-lg btn-default" role="button" href="https://github.com/aangelr" style="width: 157px;"><i class="fa fa-github fa-fw"></i><span class="network-name">&nbsp;github</span></a></li>
                     </ul>
                 </div>
             </div>
