--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto">
                     <h2>About Me</h2>
-                    <p>Grayscale is a free Bootstrap theme. It can be yours right now, simply download the template on&nbsp;<a href="#">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                    <p>This theme features stock photos by&nbsp;<a href="#">Gratisography</a>&nbsp;along with a custom Google Maps skin courtesy of&nbsp;<a href="#">Snazzy Maps</a>.</p>
-                    <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with SASS and LESS files for easy customization!</p>
+                    <p>I am a Computer Science student at UC Berkeley.</p>
+                    <p>I am from San Diego, California and I love anime, video games, and learning new things.</p>
+                    <p>Ask me about my projects and experience.</p>
                 </div>
             </div>
         </div>
@@ -71,7 +71,7 @@
             </div>
         </div>
     </section>
-    <footer>
+    <footer style="background: url(&quot;assets/img/b&wbeach.jpg&quot;) center / auto;">
         <div class="container text-center">
             <p>This website was made using Bootstrap Studio and GitHub Pages.<br><br>Angel Rodriguez © 2022<br></p>
         </div>
