--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
 <body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="77">
     <nav class="navbar navbar-light navbar-expand-md fixed-top" id="mainNav">
-        <div class="container"><a class="navbar-brand" href="#">Home</a><button data-bs-toggle="collapse" class="navbar-toggler navbar-toggler-right" data-bs-target="#navbarResponsive" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" value="Menu"><i class="fa fa-bars"></i></button>
+        <div class="container"><a class="navbar-brand" href="#">Top</a><button data-bs-toggle="collapse" class="navbar-toggler navbar-toggler-right" data-bs-target="#navbarResponsive" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" value="Menu"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item nav-link"><a class="nav-link active" href="#about">About</a></li>
-                    <li class="nav-item nav-link"><a class="nav-link" href="#download">download</a></li>
+                    <li class="nav-item nav-link"><a class="nav-link" href="#download">Projects</a></li>
                     <li class="nav-item nav-link"><a class="nav-link" href="#contact">contact</a></li>
                 </ul>
             </div>
@@ -51,8 +51,8 @@
     <section class="text-center download-section content-section" id="download" style="background-image:url('assets/img/downloads-bg.jpg');">
         <div class="container">
             <div class="col-lg-8 mx-auto">
-                <h1>Download Grayscale</h1>
-                <p>You can download Grayscale for free on the preview page.</p><button class="btn btn-primary btn-lg btn-default" type="button">visit download page</button>
+                <h1>Projects</h1>
+                <p>This section is a work in progress.</p><a class="btn btn-primary btn-lg btn-default" role="button" href="https://github.com/aangelr"><i class="fa fa-github fa-fw"></i>&nbsp;GitHub</a>
             </div>
         </div>
     </section>
