updated image of me

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <p class="intro-text">What's up?</p>
                     </div>
                 </div>
-            </div><img src="assets/img/me2.jpeg" style="width: 40%;min-width: 200px;max-width: 550px;">
+            </div><img src="assets/img/me%20Large.jpeg" style="width: 40%;min-width: 200px;max-width: 550px;background: url(&quot;https://cdn.bootstrapstudio.io/placeholders/1400x800.png&quot;);">
         </div>
     </header>
     <section class="text-center content-section" id="about">
