--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Angel Rodriguez</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:700&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/css/untitled.css">
 </head>
 
 <body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="77">
@@ -42,13 +41,13 @@
                 <div class="col-lg-8 mx-auto">
                     <h2>About Me</h2>
                     <p>I am a Computer Science student at UC Berkeley.</p>
-                    <p>I am from San Diego, California and I love anime, video games, and learning new things.</p>
+                    <p>I am from San Diego, California and I love ice skating, sushi, and learning new things.</p>
                     <p>Ask me about my projects and experience.</p>
                 </div>
             </div>
         </div>
     </section>
-    <section class="text-center download-section content-section" id="download" style="background-image:url('assets/img/downloads-bg.jpg');">
+    <section class="text-center download-section content-section" id="download" style="background-image: url('assets/img/downloads-bg.jpg');">
         <div class="container">
             <div class="col-lg-8 mx-auto">
                 <h1>Projects</h1>
@@ -65,7 +64,6 @@
                     <ul class="list-inline banner-social-buttons">
                         <li class="list-inline-item" style="margin-left: 8px;">&nbsp;<a class="btn btn-primary btn-lg btn-default" role="button" href="mailto:aangelr@icloud.com" style="width: 157px;"><i class="fa fa-envelope"></i><span class="network-name">&nbsp;Email</span></a></li>
                         <li class="list-inline-item" style="margin-left: 8px;">&nbsp;<a class="btn btn-primary btn-lg btn-default" role="button" href="https://www.linkedin.com/in/angel-rodriguez-551a3b212/" style="width: 157px;"><i class="fa fa-linkedin-square"></i><span class="network-name">&nbsp;Linkedin</span></a></li>
-                        <li class="list-inline-item" style="margin-right: 8px;margin-left: 8px;">&nbsp;<a class="btn btn-primary btn-lg btn-default" role="button" href="https://github.com/aangelr" style="width: 157px;"><i class="fa fa-github fa-fw"></i><span class="network-name">&nbsp;github</span></a></li>
                     </ul>
                 </div>
             </div>
@@ -73,7 +71,7 @@
     </section>
     <footer style="background: url(&quot;assets/img/b&wbeach.jpg&quot;) center / auto;">
         <div class="container text-center">
-            <p>This website was made using Bootstrap Studio and GitHub Pages.<br><br>Angel Rodriguez © 2022<br></p>
+            <p>This website was made using Bootstrap Studio and GitHub Pages.<br><br>Angel Rodriguez © 2023</p>
         </div>
     </footer>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
